# ROV

./: .gitignore  .gitmodules  Client.py  ROV.py  Server.py  index.html  lowLevel.py  pressure.py
Software/RovHat_Code/: CMakeCache.txt  CMakeLists.txt  Dshot.pio  main.c  main.h
Software/RovHat_Code/freertos/: FreeRTOSConfig.h
Software/RovHat_Code/include/: main.h
Software/RovHat_Code/lib/Dshot/: CMakeLists.txt  dshot.c
Software/RovHat_Code/lib/Dshot/include/: commands.h  dshot.h
Software/RovHat_Code/lib/ads1115/: CMakeLists.txt  ads1115.c
Software/RovHat_Code/lib/ads1115/include/: ads1115.h  registers.h
Software/Rpi_Code/: ROV.py  UI.py  index.html  lowLevel.py
Software/Rpi_Code/edurovi/: utils.py  web.py
Software/Rpi_Code/static/: bootstrap.css  general.js
Software/edurovi/: core.py
edurovi/: sync.py  web.py
electronics/PowerBoard/: BOM.xlsx  CPL.xlsx  Connectors.kicad_sch  Leak.kicad_sch  PowerBoard.kicad_pcb  PowerBoard.kicad_prl  PowerBoard.kicad_pro  PowerBoard.kicad_sch  PowerBoard.xml  SMPS.kicad_sch  fp-info-cache
electronics/Power_Drum/: Power_Drum.kicad_pcb  Power_Drum.kicad_prl  Power_Drum.kicad_pro  Power_Drum.kicad_sch  fabrication-toolkit-options.json
electronics/Power_Drum/bom/: ibom.html
electronics/RaspiAdapter/: RaspiAdapter-cache.lib  RaspiAdapter.kicad_pcb  RaspiAdapter.pro  RaspiAdapter.sch
electronics/RaspiAdapter/Gerber/: RaspiAdapter-B_Cu.gbr  RaspiAdapter-B_Mask.gbr  RaspiAdapter-B_Paste.gbr  RaspiAdapter-B_SilkS.gbr  RaspiAdapter-Edge_Cuts.gbr  RaspiAdapter-F_Cu.gbr  RaspiAdapter-F_Mask.gbr  RaspiAdapter-F_Paste.gbr  RaspiAdapter-F_SilkS.gbr  RaspiAdapter-NPTH.drl  RaspiAdapter-PTH.drl  RaspiAdapter-job.gbrjob
electronics/RovHat/: Connectors.kicad_sch  MCU.kicad_sch  RovHat.kicad_pcb  RovHat.kicad_prl  RovHat.kicad_pro  RovHat.kicad_sch  Sensors.kicad_sch  power.kicad_sch
electronics/SynchronousBuck/: SynchronousBuck-cache.lib  SynchronousBuck.kicad_pcb  SynchronousBuck.pro  SynchronousBuck.sch  SynchronousBuck.xml  SynchronousBuck_bom_1.0_(prod).csv  SynchronousBuck_bom__(prod).csv
electronics/SynchronousBuck/Gerber/: CPL.csv  (+16 more)
ssl/: cert.pem  key.pem
static/: extra.js  keys.js  style.css
(+34 files in other folders)
